[workspace]
resolver = "2"
members = [
    "contracts/dataset-registry",
    "contracts/license-router",
    "contracts/royalty-splitter",
]

[workspace.dependencies]
soroban-sdk = { version = "22.0.11" }

[profile.release]
opt-level = "z"
overflow-checks = true
debug = 0
strip = "symbols"
debug-assertions = false
panic = "abort"
codegen-units = 1
lto = true

[workspace.package]
rust-version = "1.78"
