[package]
name = "dataset-registry"
version = "0.1.0"
edition = "2021"
rust-version = "1.78"

[lib]
crate-type = ["cdylib", "rlib"]

# `alloc` is required by the `format!` calls used to build dataset/reputation
# storage keys and ids in a `#![no_std]` crate (mirrors `data-commission`).
[dependencies]
soroban-sdk = { workspace = true, features = ["alloc"] }

[dev-dependencies]
soroban-sdk = { workspace = true, features = ["testutils", "alloc"] }

[features]
testutils = ["soroban-sdk/testutils"]
